tests/lean/find.lean
import find.
find "^.ongr"
find "foo"
find "(ab"